# Capstone

./: .gitignore  QUICKSTART.md  README.md  ai_connectors.py  brain_os.py  costs.json  ekosystem.py  encryption.key  feed_harvest_to_brain.py  find-usb.sh  glyph_core.py  harvest_summary.py  mega_harvest.py  multi_harvester.py  seed_brain.py  seed_grimoire (1).py  test.py  wireless_security_summary.txt  write-usb.ps1  write-usb.sh
0rb-aether/: INSTALL-WINDOWS.md  install-windows.bat  install-windows.ps1  install.sh
0rb-aether/ci/: pipeline.yml
0rb-aether/core/brain/: Cargo.toml
0rb-aether/core/brain/src/: agent_swarm.rs  api.rs  intent.rs  main.rs  store.rs  voice_control.rs  web3.rs
0rb-aether/core/security/: ram_wipe.sh
0rb-aether/core/security/apparmor/: orb-brain
0rb-aether/core/security/seccomp/: brain.json
0rb-aether/docs/: agent-training-research.md  security-checklist.md  spec.md
0rb-aether/tools/asr/: requirements.txt  voice_auth.py
0rb-aether/ui/compositor/: Cargo.toml
0rb-aether/ui/compositor/src/: aether.rs  boot_sequence.rs  containers.rs  main.rs  particles.rs
0rb-aether/ui/compositor/src/shaders/: aether.wgsl  boot.wgsl  containers.wgsl
0rb-aether/web3/: README.md  WEB3-GUIDE.md
0rb-aether/web3/contracts/: OrbCreatorToken.sol  OrbGaming.sol  OrbNFT.sol  OrbPayments.sol  hardhat.config.js  package.json
0rb-aether/web3/contracts/scripts/: deploy.js
0rb-aether/web3/wallet/: Cargo.toml
0rb-aether/web3/wallet/src/: ethereum.rs  keystore.rs  lib.rs  solana.rs  types.rs
vapi_sparring/: sparring_orchestrator.py  sparring_referee.py  vapi_configs.json
