[package]
name = "orb-brain"
version = "0.1.0"
edition = "2021"
description = "0RB_AETHER Brain Orchestrator - Intent parsing, routing, and security gating"
license = "MIT"

[dependencies]
tokio = { version = "1.34", features = ["full", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlcipher = { version = "0.1", package = "rusqlite", features = ["bundled-sqlcipher"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[[bin]]
name = "orb-brain"
path = "src/main.rs"
