[package]
name = "orb-wallet"
version = "0.1.0"
edition = "2021"
description = "0RB_AETHER Multi-Chain Crypto Wallet"

[dependencies]
# Ethereum
ethers = { version = "2.0", features = ["abigen", "ws"] }
alloy-primitives = "0.7"

# Solana
solana-sdk = "1.18"
solana-client = "1.18"

# Cryptography
secp256k1 = { version = "0.28", features = ["recovery", "rand"] }
ed25519-dalek = "2.1"
sha2 = "0.10"
ripemd = "0.1"
bip39 = "2.0"
hdpath = "0.6"

# Async & Serialization
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
argon2 = "0.5"

# Utils
hex = "0.4"
bs58 = "0.5"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
